<resources>
    <string name="app_name">SkyTalk</string>
    <string name="action_about">ABOUT</string>
    <string name="action_login">USERNAME</string>
    <string name="txtAboveEditLogin">Please <b>enter the name</b> you want others see you</string>
    <string name="hint_login">New username</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="version"><b>VERSION</b> %1$s</string>
    <string name="version_test">THIS IS <b>sparta</b></string>

    <!--permissions-->
    <string name="permission_camera_rationale">Sample application needs permission to use cameras</string>
    <string name="permission_internet_rationale">Sample application needs permission to use the network</string>
    <string name="permission_audiorecord_rationale">Sample application needs permission to use the microphone</string>
    <string name="permission_audiosettings_rationale">Sample application needs permission to modify the audio settings</string>
    <string name="permission_writeexternalstorage_rationale">Sample application needs permission to write to the SD card</string>
    <string name="permission_camera_granted">Camera permission granted</string>
    <string name="permission_internet_granted">Network permission granted</string>
    <string name="permission_audiorecord_granted">Mircophone permission granted</string>
    <string name="permission_audiosettings_granted">Audio settings permission granted</string>
    <string name="permission_writeexternalstorage_granted">SD card permission granted</string>
    <string name="permission_notgranted">Permissions were not granted.</string>

    <!--titles-->
    <string name="title_login">Username</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_create_room">Create room</string>
    <string name="experience_title">"E X P E R I E N C E"</string>
    <string name="watch_together_title">"T H E   W A T C H   T O G E T H E R"</string>

    <!--login-->
    <string name="login_info_1">PLEASE&#160;</string>
    <string name="login_info_2">ENTER THE NAME&#160;</string>
    <string name="login_info_3">YOU</string>
    <string name="login_info_4">WANT OTHERS SEE YOU</string>

    <!--rooms-->
    <string name="no_rooms">No rooms</string>

    <!--create room-->
    <string name="room_name">Room name</string>
    <string name="description">Description</string>
    <string name="empty_name">Please, enter room name</string>
    <string name="empty_description">Please, enter description</string>
    <string name="select_logo">Select logo</string>
    <string name="take_photo">Take photo</string>
    <string name="take_video">Pick from gallery</string>

    <!--main activity-->
    <string name="start_watching">START  WATCHING</string>

</resources>
